--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
     <title>Meus Favoritos</title>
 </head>
 <body>
-    <header>
-        <h1>Anime</h1>
-        <nav>
-            <a href="#">Favoritos</a>
-            <a href="#">Anime</a>
-            <a href="#">Filmes</a>
-            <a href="#">Musicas</a>
+    <header class="cabecalho">  
+        <h1 class="cabecalho_titulo">Anime</h1>
+        <nav class="cabecalho_menu">
+            <section class="cabecalho_menu_secao_links_principal">
+                <a class="links_secao_principal" href="#">Favoritos</a>
+                <a class="links_secao_principal" href="#">Anime</a>
+                <a class="links_secao_principal" href="#">Filmes</a>
+                <a class="links_secao_principal" href="#">Musicas</a>
+            </section>
+
+            <section class="cabecalho_menu_secao_links_social">
+                <a class="links_secao_social" href="">Github</a>
+                <a class="links_secao_social" href="">Linkedin</a>
+            </section>
+
         </nav>
     </header>
     <main></main>
