adicionando cores e gradient no cabecalho, ajustandos os links principais e socias

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </section>
 
             <section class="cabecalho_menu_secao_links_social">
-                <a class="links_secao_social" href="">Github</a>
-                <a class="links_secao_social" href="">Linkedin</a>
+                <a class="links_secao_social" href="" >Github</a>
+                <a class="links_secao_social" href="" style="background-color: #3a9dff;">Linkedin</a>
             </section>
 
         </nav>
