--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <header class="cabecalho">  
-        <h1 class="cabecalho_titulo">Anime</h1>
+        <h1 class="cabecalho_titulo">ANIME</h1>
         <nav class="cabecalho_menu">
             <section class="cabecalho_menu_secao_links_principal">
-                <a class="links_secao_principal" href="#">Favoritos</a>
-                <a class="links_secao_principal" href="#">Anime</a>
-                <a class="links_secao_principal" href="#">Filmes</a>
-                <a class="links_secao_principal" href="#">Musicas</a>
+                <a class="links_secao_principal" href="#">FAVORITOS</a>
+                <a class="links_secao_principal" href="#">ANIME</a>
+                <a class="links_secao_principal" href="#">FILMES</a>
+                <a class="links_secao_principal" href="#">MUSICAS</a>
             </section>
 
             <section class="cabecalho_menu_secao_links_social">
-                <a class="links_secao_social" href="" >Github</a>
-                <a class="links_secao_social" href="" style="background-color: #3a9dff;">Linkedin</a>
+                <a class="links_secao_social" href="" >GITHUB</a>
+                <a class="links_secao_social" href="" style="background-color: #3a9dff;">LINKEDIN</a>
             </section>
 
         </nav>
