facilitando menu trocando a nav + section por 2 navs dentro do proprio elemento pai e renomeando classes para ficar mais enxuto

--- a/index.html
+++ b/index.html
@@ -10,22 +10,27 @@
 <body>
     <header class="cabecalho">  
         <h1 class="cabecalho_titulo">ANIME</h1>
-        <nav class="cabecalho_menu">
-            <section class="cabecalho_menu_secao_links_principal">
-                <a class="links_secao_principal" href="#">FAVORITOS</a>
-                <a class="links_secao_principal" href="#">ANIME</a>
-                <a class="links_secao_principal" href="#">FILMES</a>
-                <a class="links_secao_principal" href="#">MUSICAS</a>
-            </section>
-
-            <section class="cabecalho_menu_secao_links_social">
-                <a class="links_secao_social" href="" >GITHUB</a>
-                <a class="links_secao_social" href="" style="background-color: #3a9dff;">LINKEDIN</a>
-            </section>
-
+        <nav class="cabecalho_menu_principal">
+            <a class="links_menu_principal" href="#">FAVORITOS</a>
+            <a class="links_menu_principal" href="#">ANIME</a>
+            <a class="links_menu_principal" href="#">FILMES</a>
+            <a class="links_menu_principal" href="#">MUSICAS</a>
+        </nav>
+        <nav class="cabecalho_menu_social">
+            <a class="links_menu_social" href="" >GITHUB</a>
+            <a class="links_menu_social" href="" style="background-color: #3a9dff;">LINKEDIN</a>
         </nav>
     </header>
-    <main></main>
+
+    <main>
+        <section>
+
+        </section>
+
+    </main>
+
+
+
     <footer></footer>
     
 </body>
