--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
         </nav>
     </header>
 
-    <main>
-        <section>
+    <main class="conteudo_principal">
+        <div class="conteudo_principal_favorito">
+            <h1 class="favorito_titulo">NARUTO</h1>
+            <img class="favorito_imagem" src="https://i.pinimg.com/564x/48/75/f4/4875f4d1c476b802a0cc85cd0a3e9796.jpg" alt="">
+            
+        </div>
 
-        </section>
+        
 
     </main>
 
