adicionado elementos favoritos, corrigido footer, ajustado alturas das imagens favoritas

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="links_menu_principal" href="#">FAVORITOS</a>
             <a class="links_menu_principal" href="#">ANIME</a>
             <a class="links_menu_principal" href="#">FILMES</a>
-            <a class="links_menu_principal" href="#">MUSICAS</a>
+            <a class="links_menu_principal" href="#">SERIES</a>
         </nav>
         <nav class="cabecalho_menu_social">
             <a class="links_menu_social" href="">GITHUB</a>
@@ -23,10 +23,57 @@
     </header>
 
     <main class="conteudo_principal">
+
         <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
-                <h1 class="favorito_titulo">NARUTO</h1>
-                <img class="favorito_imagem" src="https://i.pinimg.com/564x/48/75/f4/4875f4d1c476b802a0cc85cd0a3e9796.jpg" alt="">
+                <h1 class="favorito_titulo">Sousou no Frieren</h1>
+                <img class="favorito_imagem" src="/assets/animes/frieren.jpg" alt="">
         </a>
+
+        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+            <h1 class="favorito_titulo">Nageki no Bourei</h1>
+            <img class="favorito_imagem" src="/assets/animes/nageki.jpg" alt="">
+        </a>
+
+        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+            <h1 class="favorito_titulo">Log Horizon</h1>
+            <img class="favorito_imagem" src="/assets/animes/loghorizon.jpg" alt="">
+        </a>
+
+        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+            <h1 class="favorito_titulo">Amagi Brilliant Park</h1>
+            <img class="favorito_imagem" src="/assets/animes/amagi brillant park.jpg" alt="">
+        </a>
+
+        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+            <h1 class="favorito_titulo">World Trigger</h1>
+            <img class="favorito_imagem" src="/assets/animes/worldtrigger.jpg" alt="">
+        </a>
+
+        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+            <h1 class="favorito_titulo">Steins;Gate</h1>
+            <img class="favorito_imagem" src="/assets/animes/steinsgate.jpg" alt="">
+        </a>
+
+        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+            <h1 class="favorito_titulo">Knight's & Magic</h1>
+            <img class="favorito_imagem" src="/assets/animes/knightsmagic.jpg" alt="">
+        </a>
+
+        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+            <h1 class="favorito_titulo">Kaze no Stigma</h1>
+            <img class="favorito_imagem" src="/assets/animes/kazenostigma.jpg" alt="">
+        </a>
+
+        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+            <h1 class="favorito_titulo">ReLIFE</h1>
+            <img class="favorito_imagem" src="/assets/animes/relife.jpg" alt="">
+        </a>
+
+        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+            <h1 class="favorito_titulo">One Piece</h1>
+            <img class="favorito_imagem" src="/assets/animes/onepiece.jpg" alt="">
+        </a>
+
 
 
     </main>
@@ -35,19 +82,7 @@
         <h1 class="rodape_titulo">Desenvolvido por Renan Ramos</h1>
     </footer>
     
+    <script src="/scripts/script.js"></script>
 </body>
 
-    <script>
-        function mudaCorTextoAnime(){
-            const texto = document.getElementsByClassName("favorito_titulo");
-            texto[0].style.color = "#fc8feb";
-        }
-
-        function retornarPadraoCor(){
-            const texto = document.getElementsByClassName("favorito_titulo");
-            texto[0].style.color = "#c2f0fe";      
-        }
-
-
-    </script>
 </html>
