ajustado hover dos favoritos

--- a/index.html
+++ b/index.html
@@ -24,52 +24,52 @@
 
     <main class="conteudo_principal">
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+        <a href="" class="conteudo_principal_favorito" onmouseover="element0()" onmouseout="retornarPadraoCor()" > 
                 <h1 class="favorito_titulo">Sousou no Frieren</h1>
                 <img class="favorito_imagem" src="/assets/animes/frieren.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+        <a href="" class="conteudo_principal_favorito" onmouseover="element1()" onmouseout="retornarPadraoCor()" name="1" > 
             <h1 class="favorito_titulo">Nageki no Bourei</h1>
             <img class="favorito_imagem" src="/assets/animes/nageki.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+        <a href="" class="conteudo_principal_favorito" onmouseover="element2()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">Log Horizon</h1>
             <img class="favorito_imagem" src="/assets/animes/loghorizon.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+        <a href="" class="conteudo_principal_favorito" onmouseover="element3()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">Amagi Brilliant Park</h1>
             <img class="favorito_imagem" src="/assets/animes/amagi brillant park.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+        <a href="" class="conteudo_principal_favorito" onmouseover="element4()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">World Trigger</h1>
             <img class="favorito_imagem" src="/assets/animes/worldtrigger.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+        <a href="" class="conteudo_principal_favorito" onmouseover="element5()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">Steins;Gate</h1>
             <img class="favorito_imagem" src="/assets/animes/steinsgate.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+        <a href="" class="conteudo_principal_favorito" onmouseover="element6()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">Knight's & Magic</h1>
             <img class="favorito_imagem" src="/assets/animes/knightsmagic.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+        <a href="" class="conteudo_principal_favorito" onmouseover="element7()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">Kaze no Stigma</h1>
             <img class="favorito_imagem" src="/assets/animes/kazenostigma.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+        <a href="" class="conteudo_principal_favorito" onmouseover="element8()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">ReLIFE</h1>
             <img class="favorito_imagem" src="/assets/animes/relife.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="mudaCorTextoAnime()" onmouseout="retornarPadraoCor()" > 
+        <a href="" class="conteudo_principal_favorito" onmouseover="element9()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">One Piece</h1>
             <img class="favorito_imagem" src="/assets/animes/onepiece.jpg" alt="">
         </a>
