adicionado links nos botoes sociais e corrigido pequeno bug no contadorjs para o hover dos favoritos

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a class="links_menu_principal" href="#">SERIES</a>
         </nav>
         <nav class="cabecalho_menu_social">
-            <a class="links_menu_social" href="">GITHUB</a>
-            <a class="links_menu_social" href="">LINKEDIN</a>
+            <a class="links_menu_social" href="https://github.com/Ryotruuser" target="_blank">GITHUB</a>
+            <a class="links_menu_social" href="https://www.linkedin.com/in/ryotruuser/" target="_blank">LINKEDIN</a>
         </nav>
     </header>
 
