--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header class="cabecalho">  
         <h1 class="cabecalho_titulo">ANIME</h1>
         <nav class="cabecalho_menu_principal">
-            <a class="links_menu_principal" href="#">ANIME</a>
-            <a class="links_menu_principal" href="#">FILMES</a>
-            <a class="links_menu_principal" href="#">SERIES</a>
+            <a class="links_menu_principal" href="index.html">ANIME</a>
+            <a class="links_menu_principal" href="filmes.html">FILMES</a>
+            <a class="links_menu_principal" href="series.html">SERIES</a>
         </nav>
         <nav class="cabecalho_menu_social">
             <a class="links_menu_social" href="https://github.com/Ryotruuser" target="_blank">GITHUB</a>
@@ -23,52 +23,52 @@
 
     <main class="conteudo_principal">
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="element0()" onmouseout="retornarPadraoCor()" > 
+        <a href="https://www.crunchyroll.com/pt-br/series/GG5H5XQX4/frieren-beyond-journeys-end" target="_blank" class="conteudo_principal_favorito" onmouseover="element0()" onmouseout="retornarPadraoCor()" > 
                 <h1 class="favorito_titulo">Sousou no Frieren</h1>
                 <img class="favorito_imagem" src="/assets/animes/frieren.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="element1()" onmouseout="retornarPadraoCor()" name="1" > 
+        <a href="https://www.crunchyroll.com/pt-br/series/GZJH3D8J9/let-this-grieving-soul-retire" target="_blank" class="conteudo_principal_favorito" onmouseover="element1()" onmouseout="retornarPadraoCor()" name="1" > 
             <h1 class="favorito_titulo">Nageki no Bourei</h1>
             <img class="favorito_imagem" src="/assets/animes/nageki.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="element2()" onmouseout="retornarPadraoCor()" > 
+        <a href="https://www.crunchyroll.com/pt-br/series/GRVNMG93Y/log-horizon"  target="_blank" class="conteudo_principal_favorito" onmouseover="element2()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">Log Horizon</h1>
             <img class="favorito_imagem" src="/assets/animes/loghorizon.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="element3()" onmouseout="retornarPadraoCor()" > 
+        <a href="https://myanimelist.net/anime/22147/Amagi_Brilliant_Park" target="_blank" class="conteudo_principal_favorito" onmouseover="element3()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">Amagi Brilliant Park</h1>
             <img class="favorito_imagem" src="/assets/animes/amagi brillant park.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="element4()" onmouseout="retornarPadraoCor()" > 
+        <a href="https://www.crunchyroll.com/pt-br/series/GR757DMKY/world-trigger" target="_blank" class="conteudo_principal_favorito" onmouseover="element4()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">World Trigger</h1>
             <img class="favorito_imagem" src="/assets/animes/worldtrigger.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="element5()" onmouseout="retornarPadraoCor()" > 
+        <a href="https://myanimelist.net/anime/9253/Steins_Gate?q=steins&cat=anime" target="_blank" class="conteudo_principal_favorito" onmouseover="element5()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">Steins;Gate</h1>
             <img class="favorito_imagem" src="/assets/animes/steinsgate.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="element6()" onmouseout="retornarPadraoCor()" > 
+        <a href="https://www.crunchyroll.com/pt-br/series/GYX08020R/knights--magic" class="conteudo_principal_favorito" target="_blank" onmouseover="element6()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">Knight's & Magic</h1>
             <img class="favorito_imagem" src="/assets/animes/knightsmagic.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="element7()" onmouseout="retornarPadraoCor()" > 
+        <a href="https://www.crunchyroll.com/pt-br/series/GYP84XNVY/kaze-no-stigma" class="conteudo_principal_favorito" target="_blank" onmouseover="element7()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">Kaze no Stigma</h1>
             <img class="favorito_imagem" src="/assets/animes/kazenostigma.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="element8()" onmouseout="retornarPadraoCor()" > 
+        <a href="https://www.crunchyroll.com/pt-br/series/GY5VE008Y/relife" class="conteudo_principal_favorito" target="_blank" onmouseover="element8()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">ReLIFE</h1>
             <img class="favorito_imagem" src="/assets/animes/relife.jpg" alt="">
         </a>
 
-        <a href="" class="conteudo_principal_favorito" onmouseover="element9()" onmouseout="retornarPadraoCor()" > 
+        <a href="https://www.crunchyroll.com/pt-br/series/GRMG8ZQZR/one-piece" class="conteudo_principal_favorito" target="_blank" onmouseover="element9()" onmouseout="retornarPadraoCor()" > 
             <h1 class="favorito_titulo">One Piece</h1>
             <img class="favorito_imagem" src="/assets/animes/onepiece.jpg" alt="">
         </a>
