secao series finalizada, adicionada pagina sobre

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/reset.css" class="css">
     <link rel="stylesheet" href="style/style.css" class="css">
-    <title>Meus Favoritos</title>
+    <title>Meus Favoritos - Animes</title>
 </head>
 <body>
     <header class="cabecalho">  
-        <h1 class="cabecalho_titulo">ANIME</h1>
+        <h1 class="cabecalho_titulo">ANIMES</h1>
         <nav class="cabecalho_menu_principal">
-            <a class="links_menu_principal" href="index.html">ANIME</a>
+            <a class="links_menu_principal" href="index.html">ANIMES</a>
             <a class="links_menu_principal" href="filmes.html">FILMES</a>
             <a class="links_menu_principal" href="series.html">SERIES</a>
+            <a class="links_menu_principal" href="about.html">SOBRE</a>
         </nav>
         <nav class="cabecalho_menu_social">
             <a class="links_menu_social" href="https://github.com/Ryotruuser" target="_blank">GITHUB</a>
