finalizado pagina sobre mim

--- a/about.html
+++ b/about.html
@@ -28,15 +28,15 @@
             <h1 class="apresentacao-conteudo-titulo">Sobre mim</h1>
             
             <p class="apresentacao-conteudo-paragrafo-bio">
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+                Olá 👋, me chamo Renan e estou começando a entrar de cabeça em front-end, como podem ver deixei meu top 10 varias coisas para vocês olharem caso não tenham assistido, super recomendo !!, esse portal e só um teste mesmo das minhas habilidades de longa data junto aos novos conhecimentos adquiridos, e bem simples e o javascript...eee.. vamos esquecer ele por enquanto, foquei mais no desenvolvimento visual dessa vez, fiz um js bem bruto mesmo.
             </p>
 
             <p class="apresentacao-conteudo-paragrafo-bio">
-                Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.
+                No mais sou um profissional formado em ADS, tenho formação também de manutenção e suporte, atualmente atuo como Customer Support Analyst para a Eletrobras junto a Solutis, estudando para tentar pegar minha vaguinha de Dev e crescer profissionalmente, caso queira usar esse modelo para colocar seu próprio top 10 varias coisas, fica a vontade. No mais, obrigado por visitar meu humilde projeto.
             </p>
 
             <p class="apresentacao-conteudo-paragrafo-bio">
-                Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat cupidatat non.
+                A ideia desse projeto era criar mesmo o básico de html e css, essa versão simples requer um hardcode ali no html na hora de colocar cada favorito e replicar isso, porem para esse teste está bom, quem sabe mais pra frente eu volte nesse projeto e refatore ele, para mostrar a evolução do conhecimento 🧠📚.
             </p>
 
      
